public/css/style.css
/* -------------------- Import Google Font -------------------- */
@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');

/* -------------------- CSS Variables -------------------- */
:root {
  /* Font */
  --header-height: 3rem;
  --font-medium: 500;

  /* Colors */
  --first-color: #454545;
  --white-color: #fcbf49;
  --dark-color: #454545;
  --text-color: #fcbf49;
  --text-color2: #454545;

  /* Typography */
  --body-font: 'Montserrat', sans-serif;
  --big-font-size: 4.25rem;
  --h2-font-size: 1.25rem;
  --normal-font-size: 0.938rem;
  --small-font-size: 0.813rem;

  /* Margin bottom values */
  --mb1: 0.5rem;
  --mb2: 1rem;
  --mb3: 1.5rem;
  --mb4: 2rem;

  /* Z-index for fixed elements */
  --z-fixed: 100;
}

/* ---------- Responsive font sizes for larger screens ---------- */
@media screen and (min-width: 768px) {
  :root {
    --big-font-size: 6.5rem;
    --h2-font-size: 2rem;
    --normal-font-size: 1rem;
    --small-font-size: 0.875rem;
  }
}

/* -------------------- Basic Reset and Box Model -------------------- */
*,
*::before,
*::after {
  box-sizing: border-box;
}
html {
  scroll-behavior: smooth;
}

body {
  margin: var(--header-height) 0 0 0;
  font-family: var(--body-font);
  font-size: var(--normal-font-size);
  font-weight: var(--font-medium);
  color: var(--text-color2);
  line-height: 1.6;
}

h1,
h2,
p {
  margin: 0;
}
ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
a {
  text-decoration: none;
  color: var(--text-color2);
}
img {
  max-width: 100%;
  height: auto;
  display: block; /* Changed from 'inside' to 'block' for consistency and to avoid potential issues with layout */
}

/* -------------------- Reusable Section Styles -------------------- */
.section {
  padding: 1rem 0;
}

.section-title {
  position: relative;
  font-size: var(--h2-font-size);
  color: var(--dark-color);
  margin: var(--mb4) 0;
  text-align: center;
}

.section-title::after {
  position: absolute;
  content: '';
  width: 32px;
  height: 0.18rem;
  left: 0;
  right: 0;
  margin: auto;
  top: 2rem;
  background-color: var(--first-color);
}

/* -------------------- Grid Layout -------------------- */
.bd-grid {
  max-width: 1024px;
  display: grid;
  grid-template-columns: 98%;
  grid-column-gap: 2rem;
  width: calc(100% - 2rem);
  margin-left: var(--mb2);
  margin-right: var(--mb2);
}

/* -------------------- Header Styles -------------------- */
.l-header {
  width: 100%;
  position: fixed;
  top: 0;
  left: 0;
  z-index: var(--z-fixed);
  background-color: var(--first-color);
}

.nav {
  height: var(--header-height);
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.nav-item {
  margin-bottom: var(--mb4);
}
.nav-link {
  position: relative;
  color: var(--dark-color);
}
.nav-link:hover {
  color: var(--first-color);
}
.nav-logo {
  color: var(--white-color);
}
.nav-toggle {
  color: var(--white-color);
  font-size: 1.5rem;
  cursor: pointer;
}

.active::after {
  position: absolute;
  content: '';
  width: 100%;
  height: 0.18rem;
  left: 0;
  top: 2rem;
  background-color: var(--first-color);
}

/* -------------------- Mobile Menu Styles -------------------- */
@media screen and (max-width: 768px) {
  .nav-menu {
    position: fixed;
    top: var(--header-height);
    right: -100%;
    width: 80%;
    height: 100%;
    padding: 2rem;
    background-color: rgba(255, 244, 244, 0.3);
    transition: 0.5s;
    backdrop-filter: blur(10px);
  }

  .show {
    right: 0;
  }
}

/* -------------------- Home Section Styles -------------------- */
.home {
  position: relative;
  background-color: var(--first-color);
  overflow: hidden;
}
.home-container {
  height: calc(100vh - var(--header-height));
  row-gap: 5rem;
}
.home-title {
  margin-left: 0;
  align-self: flex-end;
  font-size: var(--h2-font-size);
  color: var(--white-color);
  line-height: 1.2;
}
.home-title span {
  text-shadow: 0 20px 25px rgba(0, 0, 0, 0.5);
}

.home-scroll {
  align-self: flex-start;
  padding-bottom: var(--mb2);
}
.home-scroll-link {
  writing-mode: vertical-rl;
  transform: rotate(-90deg);
  color: var(--white-color);
  margin-left: 50px;
}

.home-img {
  position: absolute;
  bottom: -11.3vh;
}

/* -------------------- About Section Styles -------------------- */
.about-container {
  justify-items: center;
  row-gap: 2rem;
  text-align: center;
  margin-top: 30px;
}

.about-img {
  display: flex;
  justify-content: center;
  padding-top: 1rem;
  width: auto;
  height: 250px;
  overflow: hidden;
  object-fit: cover;
}

.about-img img {
  width: 250px;
  object-fit: cover;
}

.about-subtitle {
  font-size: var(--h2-font-size);
  color: var(--text-color2);
  margin-bottom: var(--mb1);
}
.about-text {
  margin-bottom: var(--mb4);
}
.about-profession {
  display: block;
  margin-bottom: var(--mb4);
}
.about-social-icon {
  font-size: 1.4rem;
  margin: 0 var(--mb1);
}
.about-social-icon:hover {
  color: var(--first-color);
}

/* -------------------- Skills Section Styles -------------------- */
.skills-container {
  row-gap: 2rem;
}
.skills-subtitle {
  color: var(--first-color);
  margin-bottom: var(--mb3);
}

.skills-name {
  display: inline-block;
  font-size: var(--small-font-size);
  margin-right: var(--mb2);
  margin-bottom: var(--mb3);
  border-radius: 0.35rem;
  transition: 0.5s;
}

.skills-name:hover {
  background-color: var(--first-color);
  color: var(--white-color);
  cursor: default;
}

.skills-img img {
  border-radius: 0.5rem;
}
.skills-img img#skill-logo { 
  max-width: 248px;   
  max-height: 186px;  
  object-fit: contain; 
  justify-self: center;
}

/* -------------------- Portfolio Section Styles -------------------- */
.portfolio {
  background-color: var(--white-color);
}
.portfolio-container {
  justify-items: center;
  row-gap: 2rem;
}
.portfolio-item {
  text-align: center;
}
/* ... */

